--- a/app/src/main/res/layout/activity_face_register.xml
+++ b/app/src/main/res/layout/activity_face_register.xml
@@ -30,24 +30,10 @@
             android:layout_marginTop="20dp">
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/cameraBtn"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginEnd="20dp"
                 android:background="@drawable/radius_button"
                 android:text="카메라"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="17sp">
-            </androidx.appcompat.widget.AppCompatButton>
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/galleryBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginStart="20dp"
-                android:background="@drawable/radius_button"
-                android:text="갤러리"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="17sp">
